[gd_scene load_steps=20 format=3 uid="uid://c80n55k76vtop"]

[ext_resource type="Texture2D" uid="uid://bb8wau8jdvnvb" path="res://Assets/Wheel Move Wheel.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Roller.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/Delta Independent Timer.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/Generic Enemy Holder.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://4irf4rdofqe2" path="res://Assets/Wheel Move Chassis.png" id="5"]

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(6.5, 5.5)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(7.5, 6)

[sub_resource type="RectangleShape2D" id="20"]
size = Vector2(5, 3.5)

[sub_resource type="Animation" id="Animation_5usf3"]
resource_name = "Damaged"
length = 2.4
loop_mode = 1
step = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="10"]
resource_name = "Enemy Step"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="1"]
resource_name = "Idle"
length = 2.4
loop_mode = 1
step = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="17"]
resource_name = "Move"
length = 4.4
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.48, 0.56, 0.8, 0.88, 0.96, 1.04, 1.84, 1.92, 2, 2.24, 2.64, 2.72, 2.8, 3.04, 3.12, 3.2, 3.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 0, 0, 1, 2, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 2, 0]
}

[sub_resource type="Animation" id="21"]
resource_name = "Move Alarm"
length = 4.4
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.48, 0.56, 0.8, 0.88, 0.96, 1.04, 1.84, 1.92, 2, 2.24, 2.64, 2.72, 2.8, 3.04, 3.12, 3.2, 3.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 3, 4, 3, 4, 4, 5, 3, 3, 4, 3, 3, 3, 4, 3, 3, 4, 5, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w8lp6"]
_data = {
"Damaged": SubResource("Animation_5usf3"),
"Enemy Step": SubResource("10"),
"Idle": SubResource("1"),
"Move": SubResource("17"),
"Move Alarm": SubResource("21")
}

[sub_resource type="Animation" id="14"]
resource_name = "Damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_d8i5j"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="18"]
resource_name = "Move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="19"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u62pu"]
_data = {
"Damaged": SubResource("14"),
"Idle": SubResource("Animation_d8i5j"),
"Move": SubResource("18"),
"RESET": SubResource("19")
}

[node name="Roller" type="CharacterBody2D"]
z_index = -2
texture_filter = 1
collision_layer = 2
collision_mask = 6
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("8")

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(-4, 2)
script = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]

[node name="GroundChecker" type="RayCast2D" parent="Enemy"]
visible = false
position = Vector2(-6, 4)
target_position = Vector2(0, 1)
collision_mask = 4

[node name="WallChecker" type="RayCast2D" parent="Enemy"]
visible = false
position = Vector2(5, 0)
target_position = Vector2(0, 0)
collision_mask = 4

[node name="Jumpbox" type="Area2D" parent="Enemy"]
position = Vector2(1, -2.40731)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Jumpbox"]
position = Vector2(3.5, 0.40731)
shape = SubResource("2")

[node name="Hurtbox" type="Area2D" parent="Enemy"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hurtbox"]
position = Vector2(4.5, -1.5)
shape = SubResource("20")

[node name="Hitbox" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hitbox"]
position = Vector2(4, -1.5)
shape = SubResource("20")

[node name="Chassis" type="Sprite2D" parent="Enemy"]
z_index = 1
position = Vector2(-3, -12)
texture = ExtResource("5")
centered = false
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy/Chassis"]
autoplay = "Move"
libraries = {
"": SubResource("AnimationLibrary_w8lp6")
}

[node name="Wheel" type="Sprite2D" parent="Enemy"]
position = Vector2(-3, -12)
texture = ExtResource("1")
centered = false
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy/Wheel"]
autoplay = "Move"
libraries = {
"": SubResource("AnimationLibrary_u62pu")
}

[node name="Timers" type="Node" parent="Enemy"]

[node name="DamageTimer" type="Timer" parent="Enemy/Timers"]
wait_time = 0.05
one_shot = true

[node name="DamageAnimTimer" type="Timer" parent="Enemy/Timers"]
wait_time = 0.3
one_shot = true

[node name="YieldTimer" type="Timer" parent="Enemy/Timers"]
one_shot = true

[node name="JumpGraceTimer" type="Timer" parent="Enemy/Timers"]
wait_time = 0.2
one_shot = true

[node name="SlowmoTimer" type="Node2D" parent="Enemy/Timers"]
position = Vector2(0, 1.59269)
script = ExtResource("3")
wait_time = 0.35

[connection signal="timeout" from="Enemy/Timers/DamageTimer" to="Enemy" method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="Enemy/Timers/DamageAnimTimer" to="Enemy" method="_on_DamageAnimTimer_timeout"]
[connection signal="timeout" from="Enemy/Timers/YieldTimer" to="Enemy" method="_on_YieldTimer_timeout"]
[connection signal="timeout" from="Enemy/Timers/JumpGraceTimer" to="Enemy" method="_on_JumpGraceTimer_timeout"]
[connection signal="is_done" from="Enemy/Timers/SlowmoTimer" to="Enemy" method="_on_SlowmoTimer_is_done"]
